--- a/README
+++ b/README
@@ -1,5 +1,5 @@
 ###
-This is the original Read-me from the official MIT's xv6 OS.To read about the extensions added, pls refer to the file :-Readme_report.pdf
+This is the original Read-me from the official MIT's xv6 OS.To read about the extensions added, pls refer to the file :-Report_README.pdf
 ###
 
 NOTE: we have stopped maintaining the x86 version of xv6, and switched
